src/components/basic-blocks/burger-menu/index.module.scss
@import '~styles/variables.scss';
@import '~styles/mixins/mixins.scss';

.menu {
  &_popover {
    max-height: 80vh !important;
    padding: 4px 16px 16px !important;
    background: #fcfcfd !important;
    border: 1px solid #f4f5f6 !important;
    box-sizing: border-box !important;
    box-shadow: 0px 40px 32px -24px rgba(15, 15, 15, 0.12) !important;
    border-radius: 20px !important;
    margin-left: 0 !important;
    margin-right: 0 !important;
    margin-top: 40px !important;
    width: 292px !important;

    ul {
      width: 100% !important;
    }
  }

  &_item {
    width: 100% !important;
    display: flex !important;
    justify-content: flex-start !important;
    padding: 12px 10px !important;
    text-decoration: none !important;
    border-radius: 10px !important;

    &_icon {
      display: flex !important;
      justify-content: center !important;
    }
  }

  &_button_item {
    padding: 0 !important;
    width: 100% !important;
    text-decoration: none !important;
    color: #23262F;
    &:hover {
      background-color: transparent !important;
    }
  }
}

.header__link {
  color: $--color-gray1;
  font-size: 16px;
  text-decoration: none;

  &_hide {
    opacity: 0;
    font-size: 16px;
    pointer-events: none;
  }

  &_place_menu {
    text-align: left;
    font-style: normal;
    font-weight: 600;
    font-size: 14px;
    line-height: 160%;


    letter-spacing: 0.01em;
    color: #566481;

    &_logout {
      height: auto !important;
      box-shadow: none !important;
      padding: 12px 16px !important;
      width: 100% !important;
      justify-content: center !important;
      border: 2px solid #e6e8ec !important;
      border-radius: 90px !important;
      text-align: center !important;
      font-weight: bold !important;
      font-size: 14px !important;
      line-height: 16px !important;
      color: #23262F !important;
    }
  }
}

.notification_circle {
  display: flex;
  justify-content: center;
  align-items: center;

  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 14px;
  color: #FFFFFF;

  width: 20px;
  height: 20px;

  background: #E6001C;
  border-radius: 80px;
}

@media (max-width: 1025px) {

}

@media (max-width: 600px) {
 .menu {
   &_popover {
     width: 100vw !important;
     max-width: 100vw !important;
     display: flex;
     align-items: center;
     flex-direction: column;

     border-radius: 0 0 20px 20px !important;
     margin-top: 16px;
   }
 }
}

